create price display

--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
 </head>
 <body>
     <h1>Our Pricing</h1>
-    <div class="prince-container">
+    <div class="price-container">
         <div>
             <span class="toggle-label">Monthly</span>
             <label class="switch">
                 <input type="checkbox" id="toggle">
                 <span class="slider"></span>
             </label>
+            <span class="toggle-label">Annually</span>
+        </div>
+        <div class="price-container">
+            <span class="price" id="monthly-price">$19.99</span>
+            <span class="price" id="annual-price">$199.99</span>
         </div>
     </div>
     
