--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
             <span class="price" id="annual-price">$199.99</span>
         </div>
     </div>
-    
+    <script src="js/app.js"></script>
 </body>
 </html>
