Update the slider

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <span class="toggle-label">Monthly</span>
             <label class="switch">
                 <input type="checkbox" id="toggle">
-                <span class="slider"></span>
+                <span class="slider round"></span>
             </label>
             <span class="toggle-label">Annually</span>
         </div>
