create card container and adjust to make it responsive

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             </label>
             <span class="toggle-label">Annually</span>
         </div>
-        <div class="price-container">
+        <div class="price-container card-container">
             <span class="price" id="monthly-price">$19.99</span>
             <span class="price" id="annual-price">$199.99</span>
         </div>
