--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
             <span class="toggle-label">Annually</span>
         </div>
         <div class="price-container card-container">
+            <p>Basic Plan</p>
             <span class="price" id="monthly-price">$19.99</span>
             <span class="price" id="annual-price">$199.99</span>
+            <p>500 GB Storage</p>
+            <p>2 Users Allowed</p>
+            <p>Send up to 3 GB</p>
+            <button class="button-style">LEARN MORE</button>
         </div>
     </div>
     <script src="js/app.js"></script>
